--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -8,17 +8,31 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Use Node.js 20
       uses: actions/setup-node@v4
       with:
         node-version: 20
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npx playwright install
-    - run: npm test
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Install Playwright browsers
+      run: npx playwright install
+
+    - name: Start backend server
+      run: npm run server &
+
+    - name: Start frontend
+      run: npm start &
+
+    - name: Wait for frontend
+      run: npx wait-on http://localhost:3000
+
+    - name: Run tests
+      run: npm test
